fix dns settings styles. AG-24187
Squashed commit of the following:

commit a3da80e534f9b353049326e7207286d5bc468929
Merge: f6fe8e97 bfe56d61
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Oct 9 14:53:25 2023 +0300

    Merge branch 'master' into fix/AG-24187-dns-styles

commit f6fe8e9772d53113368d818064533c37c4a24b88
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Oct 9 14:18:35 2023 +0300

    Revert "update notification styles"

    This reverts commit ac89ea0c5d767873849f3756752fa27b5e4b99a8.

commit 894229f617f9009a49164f683e5858b318a6866a
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Oct 9 14:18:33 2023 +0300

    Revert "fix linter"

    This reverts commit ba4ed1c352b8d43e29eb01743a65b25717cebf0e.

commit eef6c772e95485a2b0632e65c801d02f48e0cef4
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Sat Oct 7 18:24:05 2023 +0300

    fix class name for button label

commit c6cc64c0571830cf4ce6508bc31232a24b914772
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Sat Oct 7 17:09:10 2023 +0300

    fix colors

commit dc311e62598a045201776fa6c906fe232fed7ec6
Merge: 976881d0 ba4ed1c3
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Sat Oct 7 00:49:27 2023 +0300

    Merge branch 'feature/AG-24187' into fix/AG-24187-dns-styles

commit ba4ed1c352b8d43e29eb01743a65b25717cebf0e
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Sat Oct 7 00:48:55 2023 +0300

    fix linter

commit 976881d05d6532728c1dbb0c7ad9ca4496e46a1a
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Sat Oct 7 00:44:25 2023 +0300

    fix dns settings styles

commit ac89ea0c5d767873849f3756752fa27b5e4b99a8
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Sat Oct 7 00:39:12 2023 +0300

    update notification styles

--- a/src/options/components/Settings/DnsSettings/dns-settings.pcss
+++ b/src/options/components/Settings/DnsSettings/dns-settings.pcss
@@ -12,21 +12,40 @@
         background: transparent;
     }
 
+    &__items-group {
+        padding-top: 32px;
+    }
+
     &__item {
         display: flex;
         justify-content: flex-start;
         align-items: flex-start;
-        margin-left: -9px;
-        padding: 16px 16px 20px;
         cursor: pointer;
         transition: var(--t3) background-color;
         position: relative;
         background: none;
         border: none;
         border-radius: 8px;
+        padding: 16px;
         width: 100%;
         min-width: 450px;
         text-align: left;
+
+        &-title {
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 19px;
+            color: var(--gray-base);
+        }
+
+        &-desc {
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 18px;
+            margin-top: 4px;
+            color: var(--gray88);
+        }
+
 
         &:hover {
             background-color: var(--grayF3);
@@ -37,7 +56,9 @@
             right: 15px;
 
             &--button {
-                margin-left: 17px;
+                margin-left: 16px;
+                max-height: 24px;
+                border: none;
 
                 &:hover {
                     opacity: .7;
@@ -49,17 +70,19 @@
     &__label {
         color: var(--gray88);
         font-size: 14px;
-        margin: 25px 0 10px 5px;
+        line-height: 18px;
+        margin-left: 16px;
+        margin-bottom: 8px;
     }
 
     &__add-button {
         font-size: 16px;
         line-height: 24px;
-        margin-top: 15px;
+        padding: 8px 16px;
         display: flex;
 
-        & .icon {
-            margin-right: 12px;
+        &__label {
+            margin-left: 16px;
         }
     }
 
